Fixed overflow errors in about page, edited about.css

--- a/Styles/about.css
+++ b/Styles/about.css
@@ -41,7 +41,9 @@ a {
 .card {
   height: 100vh;
   width: 100vw;
+  padding-bottom: 5vh;
   scroll-snap-align: start;
+  overflow-y: auto;
   transition: 2s;
 }
 
@@ -61,13 +63,13 @@ a {
 
 .para {
   color: var(--mcontrast);
-  font-size: 200%;
+  font-size: 2rem;
   font-family: 'Signika Negative';
 }
 
 .s-para {
   color: var(--mcontrast);
-  font-size: 150%;
+  font-size: 1.5rem;
   font-family: 'Signika Negative';
 }
 
@@ -83,10 +85,6 @@ a {
   font-weight: bolder;
   font-size: 50px;
   color: var(--mcontrast);
-}
-
-.null {
-  /* Do nothing */
 }
 
 @keyframes blink {
